--- a/styles/shadowrun6.css
+++ b/styles/shadowrun6.css
@@ -509,9 +509,32 @@ a.item-control.disabled-roll:hover {
   left: 66%;
 }
 
+.matrix-persona-header {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+  color: var(--highlight-color);
+  background-color: var(--tablehead-background);
+  font-weight: 700;
+  align-items: center;
+  padding: 2px 0;
+}
+.matrix-persona-attributes {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+  font-weight: 700;
+  margin-top: 6px;
+  align-items: center;
+}
+
 .matrix-persona-attributes input[disabled] {pointer-events:none}
 .matrix-persona-attributes .matrix-attribute {
   cursor: pointer;
+  transition: .5s left ease;
+}
+.matrix-persona-attributes div, .matrix-persona-header div {
+  text-align: center; 
 }
 .matrix-persona-attributes .matrix-attribute input:disabled {
   width: 2em;
@@ -521,4 +544,7 @@ a.item-control.disabled-roll:hover {
   background: rgb(0 200 50);
   color: white;
   box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+}
+.matrix-persona-attributes .matrix-attribute-mod input {
+  width: 2em;
 }
