--- a/styles/shadowrun6.css
+++ b/styles/shadowrun6.css
@@ -548,3 +548,18 @@ a.item-control.disabled-roll:hover {
 .matrix-persona-attributes .matrix-attribute-mod input {
   width: 2em;
 }
+#section-matrixbase .collapsible-content { padding: 0; }
+.matrix-persona-attributes .collapsible, .matrix-section .collapsible label {
+  position: relative;
+}
+.matrix-persona-attributes .collapsible:hover:after {
+  position: absolute;
+  left: 1px;
+  content : "\25BC";
+  color: lightgray;
+}
+.matrix-section .collapsible label:hover:after {
+  position: absolute;
+  content : "\25BC";
+  color: lightgray;
+}
