Fix critter powers having a comma at the end of the list on the NPC readonly sheet (#69)

--- a/templates/parts/npc-critterpowers.html
+++ b/templates/parts/npc-critterpowers.html
@@ -4,8 +4,7 @@
 	<!-- Powers -->
 	{{#each actor.items as |item id|}}
 	{{#iff item.type '==' 'critterpower'}}
-   <label class="" data-skill="{{id}}">{{item.name}}</label>
-    ,
+   <label class="" data-skill="{{id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
    {{/iff}}
    {{/each}}
 </dd>
