Added Notes section to Vehicle/Drone sheet (#71)

--- a/templates/actor/shadowrun6-Vehicle-sheet.html
+++ b/templates/actor/shadowrun6-Vehicle-sheet.html
@@ -24,6 +24,8 @@
 		{{> "systems/shadowrun6-eden/templates/parts/vehicle-piloting.html"}}
 		{{> "systems/shadowrun6-eden/templates/parts/section-autosoft.html"}}
 
+		{{> "systems/shadowrun6-eden/templates/parts/section-notes.html"}}
+
 		</div>
     </section>
 </form>
