Increased size of Speed field on Vehicle/Drone sheet (#72)

--- a/templates/parts/vehicle-stats.html
+++ b/templates/parts/vehicle-stats.html
@@ -36,7 +36,7 @@
 			<td>
 				<input  name="{{id}}SpeedIntervalOffroad" data-field="system.spdiOff" type="number" value="{{system.spdiOff}}" data-dtype="Number" class="box" style="text-align:left; margin-left: 0px;">
 			</td>
-			<td><input name="{{id}}TopSpeed" data-field="system.tspd" type="number" value="{{system.tspd}}" data-dtype="Number" class="box"></td>
+			<td><input name="{{id}}TopSpeed" data-field="system.tspd" type="number" value="{{system.tspd}}" data-dtype="Number" class="box" style="width: 3em;"></td>
 			<td><input name="{{id}}Body" data-field="system.bod" type="number" value="{{system.bod}}" data-dtype="Number" class="box"></td>
 			<td><input name="{{id}}Armor" data-field="system.arm" type="number" value="{{system.arm}}" data-dtype="Number" class="box"></td>
 			<td><input name="{{id}}Pilot" data-field="system.pil" type="number" value="{{system.pil}}" data-dtype="Number" class="box"></td>
