Fix localization of monitor DEAD and BROKEN DOWN states (#74)

--- a/templates/parts/vehicle-monitor.html
+++ b/templates/parts/vehicle-monitor.html
@@ -48,7 +48,7 @@
 			<td id="barOverflowMax">
 				<div style="width: 300px;">
 					<div class="overflow-bar-dead" style="position: relative; z-index: 1; border: solid black 1px;">
-						<div class="overflow-bar-health centered" style="width: 100%;">BROKEN DOWN</div>
+						<div class="overflow-bar-health centered" style="width: 100%;">{{localize 'shadowrun6.monitor.broken'}}</div>
 					</div>
 				</div>
 			</td>
