--- a/templates/parts/monitors.html
+++ b/templates/parts/monitors.html
@@ -51,7 +51,7 @@
 				<div style="width: 300px;">
 					{{#iff system.overflow.dmg '>=' system.overflow.max}}
 					<div class="overflow-bar-dead" style="position: relative; z-index: 1; border: solid black 1px;">
-						<div class="overflow-bar-health centered" style="width: 100%;">DEAD</div>
+						<div class="overflow-bar-health centered" style="width: 100%;">{{localize 'shadowrun6.monitor.dead'}}</div>
 					</div>
 					{{else}}
 					<div class="overflow-bar" style="position: relative; z-index: 1; border: solid black 1px;">
