--- a/templates/actor/shadowrun6-NPC-sheet.html
+++ b/templates/actor/shadowrun6-NPC-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}}" autocomplete="off" style="min-width: 810px">
   <div class="npc-firstline">
     <span>
       {{localize 'shadowrun6.actor.editable'}} 
