Fix: Translation Fix: Marking of die when reroll 1 without selecting a die

--- a/templates/chat/tooltip.html
+++ b/templates/chat/tooltip.html
@@ -17,7 +17,7 @@
                 <select name="edgeBoostSelect">
                     {{selectOptions postEdgeBoosts valueAttr="id" labelAttr="label" localize=true}}
                 </select>
-                <button name="edgePerform" class="edgePerform" type="button">Einsetzen</button>
+                <button name="edgePerform" class="edgePerform" type="button">{{localize "shadowrun6.roll.edge.spend"}}</button>
             </form>
         </div>
         {{/if}}
