--- a/templates/chat/roll-sr6.html
+++ b/templates/chat/roll-sr6.html
@@ -3,7 +3,15 @@
   {{log "roll-sr6.html data=" data}}
   {{log "roll-sr6.html prepared=" prepared}}
   {{log "roll-sr6.html configured=" configured}}
+  
+  {{#if configured.opponentEdgeReroll}}
+  <header class="message-header flexrow">
+    <h4 class="message-sender">{{localize 'shadowrun6.roll.edge.original_test'}} {{configured.speaker.alias}}</h4>
+  </header>
+  {{/if}}
+
   <h3>{{actionText}}</h3>
+
   {{#if (or edge_use isOpposed)}}
   <div class="chat-edge" style="display:block">    
     {{#if isOpposed}}
